--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,6 @@
 asgiref==3.3.1
-certifi==2020.12.5
-chardet==4.0.0
-click==7.1.2
-colorama==0.4.4
-decorator==4.4.2
-Django==3.1.5
+Django==3.1.6
+django-cors-headers==3.7.0
 djangorestframework==3.12.2
-dynaconf==3.1.2
-hvac==0.10.6
-idna==2.10
-knox==0.1.11
-loguru==0.5.3
-pytz==2020.5
-requests==2.25.1
-shortuuid==1.0.1
-six==1.15.0
+pytz==2021.1
 sqlparse==0.4.1
-urllib3==1.26.3
-validators==0.18.2
-win32-setctime==1.0.3
